<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:id="@+id/tvFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_title"
        android:textSize="24sp"
        android:textColor="@color/neutral_text"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvFragmentDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_description"
        android:textSize="16sp"
        android:textColor="@color/neutral_text"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvFragmentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGoToSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_to_second"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvFragmentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>